# Proyecto-Final-IngSoft

./: .gitignore  README.md  pyproject.toml
docs/clases/: clases.drawio  clases.md
docs/formularios/: contrato.md  factura.md  formularios.md  informe.md  solicitud.md
docs/interfaces/: interfaces.md
resources/: interfaz.ui
