[project]
name = "proyectof-inal-ingsoft"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge-ivan-aa",email = "jorgei.acostaa@uqvirtual.edu.co"}
]

license = {text = "gpl v3.0"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyside6 (==6.8.3)",
    "pyside6-addons (==6.8.3)",
    "pyside6-essentials (==6.8.3)",
    "setuptools (==78.1.0)",
    "shiboken6 (==6.8.3)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
